Spacing fixed

--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ header{
 
 .clients-section{
   background: #F2F6F8;
-  padding: 70px 0 250px;
+  padding: 70px 0 220px;
 }
 
 .clients-content{
